--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Changes</title>
 </head>
+
 <body>
     <h1>This is the first change</h1>
+    <h2>This is the test 2 of the push, pull, merge</h2>
+
 </body>
+
 </html>
