--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>This is the first change</h1>
     <h2>This is the test 2 of the push, pull, merge</h2>
-
+    <h3>This is the third test of push,pull,merge.</h3>
 </body>
 
 </html>
