--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>This is the first change</h1>
     <h2>This is the test 2 of the push, pull, merge</h2>
     <h3>This is the third test of push,pull,merge.</h3>
+    <h4>This is the fourth test of the push, pull, merge.</h4>
 </body>
 
 </html>
